# Workspace

./: README.md  package-lock.json
nasdaq_ale_bot/: .env.example  .gitignore  ASSUMPTIONS.md  PLAN.md  PLAN_PHASE2.md  PLAN_PHASE3.md  README.md  pyproject.toml
nasdaq_ale_bot/.claude/: settings.json
nasdaq_ale_bot/.context/: AI_INSIGHTS.md  LESSONS_LEARNED.md  STRATEGY.md  TECH_STACK.md
nasdaq_ale_bot/config/: cost_model.yaml  instruments.yaml  news_events.csv  orb_strategy.yaml  strategy.yaml
nasdaq_ale_bot/data/: ml_session_predictions.csv  news_events.csv
nasdaq_ale_bot/data/historical/: manifest.json
nasdaq_ale_bot/docs/wiki/: 01-state-engine.md  02-candle-view.md  03-cisd-testing.md  04-assumptions-index.md  05-fail-closed.md  06-broker-protocol.md  index.md
nasdaq_ale_bot/results/: phase3_detection_audit.json  phase3_grid_results.csv  phase3_oos_verdict.json
nasdaq_ale_bot/scripts/: constraint_diagnostic.py  debug_single_day.py  fetch_es_databento.py  fetch_phase2_fixture.py  fetch_phase3_data.py  mean_reversion_recon.py  metrics_crosscheck.py  orb_jan2024_sanity.py  phase35_ml_session_regime.py  phase3_apex_50k_sim.py  phase3_avg_rr_diag.py  phase3_avg_rr_verify.py  phase3_detection_audit.py  phase3_ifvg_lifetime.py  phase3_jan_funnel.py  phase3_monthly_2024.py  phase3_rejection_count.py  phase3_walk_forward_3splits.py  phase4_check1_lookahead_audit.py  phase4_check2_param_stability.py  phase4_check35_apex_sizing.py  phase4_check3_apex_rolling.py  phase4_orb_steps234.py  phase4_tradeify_va_final.py  run_phase3_pipeline.py  vwap_recon.py
(+103 files in other folders)
