[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasdaq-ale-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.33,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "structlog>=24.1,<25.0",
  "pyyaml>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "pyarrow>=15.0,<20.0",
  "pandas_market_calendars>=4.4,<5.0",
  "tzdata>=2024.1",
  "databento>=0.78.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-asyncio>=0.23,<1.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "types-pyyaml>=6.0",
]
crosscheck = [
  "vectorbt>=0.26,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/nasdaq_ale_bot"]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"
